--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,13 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Http/RouteId.cpp
             src/Http/RouteId.hpp
             src/Signup/SignupController.cpp
-            src/User/PasswordChangeController.cpp)
+            src/User/PasswordChangeController.cpp
+            src/Server/TodoController.cpp
+            src/Server/TodoController.hpp
+            src/Template/BaseTemplate.cpp
+            src/Template/BaseTemplate.hpp
+            src/Data/AsJson.cpp
+            src/Data/AsJson.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PUBLIC -Wall -Wextra -Werror -Wpedantic
