--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,7 +209,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Data/AsJson.hpp
             src/Data/Migrations.hpp
             src/Login/ProfileController.cpp
-            src/Login/ProfileController.hpp)
+            src/Login/ProfileController.hpp
+            src/Document/DocumentController.cpp
+            src/Document/DocumentController.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PUBLIC -Wall -Wextra -Werror -Wpedantic
