simple dockerfile for building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ find_package(Threads)
 if (APPLE)
     find_package(Poco COMPONENTS Net Util Data DataSQLite NetSSL)
 else ()
+    find_package(OpenSSL)
     find_package(Poco COMPONENTS Net Util Data DataSQLite Crypto NetSSL)
     add_definitions(-DUSE_POCO_CRYPTO)
 endif ()
