--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,8 +18,14 @@ jobs:
         packages: libpoco-dev libelf-dev libdwarf-dev libspdlog-dev ninja-build
         version: 1.0
     - name: configure
-      run: mkdir build && cd build && cmake -G Ninja ..
+      run: mkdir build && cd build && cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
     - name: build
       run: cd build && ninja
     - name: test
       run: cd build && ninja test
+    - name: package
+      run: cd build && cpack
+    - uses: actions/upload-artifact@v2
+      with:
+        name: deb
+        path: build/*.deb
