time events table

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Data/MigrationsV7.cpp
             src/Data/MigrationsV7.hpp
             src/Http/SessionStorageSql.cpp
-            src/Http/SessionStorageSql.hpp)
+            src/Http/SessionStorageSql.hpp
+            src/Data/MigrationsV8.cpp
+            src/Data/MigrationsV8.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PRIVATE -Wall -Wextra -Werror -Wpedantic
