validate entered time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,7 +265,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/String/timeDifference.cpp
             src/String/timeDifference.hpp
             src/Time/Time.cpp
-            src/Time/Time.hpp)
+            src/Time/Time.hpp
+            src/Data/ValidationError.cpp
+            src/Data/ValidationError.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PRIVATE -Wall -Wextra -Werror -Wpedantic
