--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,7 +266,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/DateTime/Time.hpp
             src/Data/ValidationError.cpp
             src/Data/ValidationError.hpp
-            src/Impl/check_memory_usage.cpp)
+            src/Impl/check_memory_usage.cpp
+            src/Data/MigrationsV9.cpp
+            src/Data/MigrationsV9.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PRIVATE -Wall -Wextra -Werror -Wpedantic
